Changed path question delay configuration from boolean to a multiplier.

--- a/Mods/src/org/gotti/wurmunlimited/mods/meditatemod/meditatemod.properties
+++ b/Mods/src/org/gotti/wurmunlimited/mods/meditatemod/meditatemod.properties
@@ -12,5 +12,7 @@ noMeditateDelay=true
 unlimitedMeditations=true
 # true: disable distance-moved requirement for meditation skill gains.
 noMeditateDistance=true
-# true: disable delays between path questions
-noPathLevelDelay=true
+# This acts as a multiplier for delays between path questions.
+# Setting it to 0.0f will disable those delays.  1.0f will leave them at the default.
+# Setting it to 0.5 will halve the delays, 0.25f will cut them by a quarter, 2.0f will double them, etc.
+pathLevelDelayMultiplier=0.0f
