Added 2 variables, outOfThinAir and CritterNoBounties.

--- a/src/org/gotti/wurmunlimited/mods/bountymod/bountymod.properties
+++ b/src/org/gotti/wurmunlimited/mods/bountymod/bountymod.properties
@@ -1,11 +1,17 @@
 classname=org.gotti.wurmunlimited.mods.bountymod.BountyMod
 classpath=bountymod.jar
 # true: Bred animals will now award fight skill (and a chance for coin).
-# false: No effect (Note that this means killing bred animals will not award coin)
+# false: No effect (Note that this means killing bred animals will not award coin).
 skillGainForBred=true
 # true: Coins will always be awarded for applicable kills.
-# false: No effect (Coins will be awarded at a small chance for applicable kills)
+# false: No effect (Coins will be awarded at a small chance for applicable kills).
 increasedBounties=true
+# true: Money will be created out of thin air.
+# false: Money will be drawn from King's pocket (it will affect economy).
+outOfThinAir=false
+# true: Friendly creatures from the same kingdom of the player will award no bounty.
+# false: All creatures will award a bounty.
+critterNoBounties=true
 #Individual Bounties follows:
 #Reward for killing a Brown Cow, in iron coins.  Default Value: 100
 Cow_Brown_Bounty=100
