MeditateMod additions: added pathChangeDelay and maxLevel configurables.

--- a/src/meditatemod.properties
+++ b/src/meditatemod.properties
@@ -22,3 +22,7 @@ useCustomTime=true
 # If useCustomTime above is true, then this is how long meditations will take, in tenths of a second
 # (Example: 300 would mean a meditation takes 30 seconds)
 customTime=300
+# Delay for joining a new path after leaving an old one.  Default: 86400000
+pathChangeDelay=86400000
+# Maximum meditation level a player may reach.
+maxLevel=13
