--- a/src/bountymod.properties
+++ b/src/bountymod.properties
@@ -21,6 +21,8 @@ bountyMultiplier=1.0f
 # floating point number that is applied to bounties for player-bred creatures.
 # default value: 0.1f
 bredMultiplier=0.1f
+# Default bounty on critters that are unknown or otherwise not in the individual bounties list
+defaultBounty=100
 #Individual Bounties follows:
 #Reward for killing a Brown Cow, in iron coins.  Default Value: 100
 Cow_Brown_Bounty=100
@@ -146,3 +148,53 @@ Ram_Bounty=100
 Drake_Red_Bounty=10000
 #Reward for killing a Blue Drake, in iron coins.  Default Value: 10000
 Drake_Blue_Bounty=10000
+#Reward for killing a Fog Spider, in iron coins.  Default Value: 800
+Spider_Fog_Bounty=800
+
+#Now for the Valrei critters and Avatars I foolishly assumed I wouldn't have to handle.
+#Reward for killing a Sol Demon, in iron coins.  Default Value: 10000
+Demon_Sol_Bounty=10000
+#Reward for killing a Deathcrawler Minion, in iron coins.  Default Value: 10000
+Deathcrawler_Minion_Bounty=10000
+#Reward for killing a Spawn of Uttacha, in iron coins.  Default Value: 10000
+Spawn_Uttacha_Bounty=10000
+#Reward for killing a Son Of Nogump, in iron coins.  Default Value: 10000
+Son_Of_Nogump_Bounty=10000
+#Reward for killing a Drakespirit, in iron coins.  Default Value: 10000
+Drakespirit_Bounty=10000
+#Reward for killing an Eaglespirit, in iron coins.  Default Value: 10000
+Eaglespirit_Bounty=10000
+#Reward for killing a Vynora Avatar, in iron coins.  Default Value: 10000
+Avatar_Vynora_Bounty=10000
+#Reward for killing a Magranon Avatar, in iron coins.  Default Value: 10000
+Avatar_Magranon_Bounty=10000
+#Reward for killing a Fo Avatar, in iron coins.  Default Value: 10000
+Avatar_Fo_Bounty=10000
+#Reward for killing a Libila Avatar, in iron coins.  Default Value: 10000
+Avatar_Libila_Bounty=10000
+
+
+#Multiplier for Fierce creatures.  Default Value: 
+Fierce_StatusMultiplier=1.5f
+#Multiplier for Angry creatures.  Default Value: 
+Angry_StatusMultiplier=1.4f
+#Multiplier for Raging creatures.  Default Value: 
+Raging_StatusMultiplier=1.6f
+#Multiplier for Slow creatures.  Default Value: 
+Slow_StatusMultiplier=0.95f
+#Multiplier for Alert creatures.  Default Value: 
+Alert_StatusMultiplier=1.2f
+#Multiplier for Greenish creatures.  Default Value: 
+Greenish_StatusMultiplier=1.7f
+#Multiplier for Lurking creatures.  Default Value: 
+Lurking_StatusMultiplier=1.1f
+#Multiplier for Sly creatures.  Default Value: 
+Sly_StatusMultiplier=0.8f
+#Multiplier for Hardened creatures.  Default Value: 
+Hardened_StatusMultiplier=1.3f
+#Multiplier for Scared creatures.  Default Value: 
+Scared_StatusMultiplier=0.85f
+#Multiplier for Diseased creatures.  Default Value: 
+Diseased_StatusMultiplier=0.9f
+#Multiplier for Champion creatures.  Default Value: 
+Champion_StatusMultiplier=1.7f
