Added missing rift creatures and changed their names and default bounties to more reasonable values

--- a/src/bountymod.properties
+++ b/src/bountymod.properties
@@ -173,6 +173,20 @@ Avatar_Fo_Bounty=10000
 #Reward for killing a Libila Avatar, in iron coins.  Default Value: 10000
 Avatar_Libila_Bounty=10000
 
+#Reward for killing a Rift Beast, in iron coins.  Default Value: 800
+Rift_Beast=800
+#Reward for killing a Rift Jackal, in iron coins.  Default Value: 1000
+Rift_Jackal=1000
+#Reward for killing a Rift Ogre, in iron coins.  Default Value: 2000
+Rift_Ogre=2000
+#Reward for killing a Rift Warmaster, in iron coins.  Default Value: 10000
+Rift_Warmaster=10000
+#Reward for killing a Rift Caster, in iron coins.  Default Value: 2000
+Rift_Caster=2000
+#Reward for killing a Rift Ogre Mage, in iron coins.  Default Value: 2000
+Rift_Ogre_Mage=2000
+#Reward for killing a Rift Summoner, in iron coins.  Default Value: 2000
+Rift_Summoner=2000
 
 #Multiplier for Fierce creatures.  Default Value: 
 Fierce_StatusMultiplier=1.5f
