Add 4 more creatures and some explanation for the custom ones

--- a/src/bountymod.properties
+++ b/src/bountymod.properties
@@ -188,6 +188,20 @@ Rift_Ogre_Mage=2000
 #Reward for killing a Rift Summoner, in iron coins.  Default Value: 2000
 Rift_Summoner=2000
 
+#Reward for killing a Worg, in iron coins. Default value: 1000 
+Worg_Bounty=1000
+#Reward for killing an Avenger of Light, in iron coins. Default value: 1000 
+Avenger_of_Light_Bounty=1000
+#Reward for killing a Unicorn Foal, in iron coins. Default value: 1
+Unicorn_Foal_Bounty=1
+#Reward for killing a Hell Foal, in iron coins. Default value: 1
+Hell_Foal_Bounty=1
+
+#Custom mobs, made with mods. You can find the creatures' names in the server log as follows:
+#[09:42:10 PM] INFO org.gotti.wurmunlimited.modsupport.IdFactory: Using id 2147483645 for creaturetemplate mod.creature.avenger
+#In this case what you write should be(without the #, of course):
+#Custom_mod.creature.avenger_Bounty=2000
+
 #Multiplier for Fierce creatures.  Default Value: 
 Fierce_StatusMultiplier=1.5f
 #Multiplier for Angry creatures.  Default Value: 
